ParNew: assert(!_g->to()->is_in_reserved(obj),"Scanning field twice?") with LargeObjects tests

XMLWordPrintable

    • gc
    • b13
    • generic, x86, sparc
    • generic, linux_redhat_3.0, solaris_7
    • Verified

        When running the test gc/gctests/LargeObjects/large003 on linux with a 64-bit fastdebug VM, the following assert fails intermittently (about 1/3 of the time, or less):

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/export/ws/hs/hotspot-gc/src/share/vm/gc_implementation/parNew/parOopClosures.inline.hpp:73), pid=11422, tid=1075845440
        # Error: assert(!_g->to()->is_in_reserved(obj),"Scanning field twice?")
        #
        # JRE version: 7.0-b63
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (17.0-b01-hotspot-gc.20090915100844-fastdebug mixed mode linux-amd64 compressed oops)
        # If you would like to submit a bug report, please visit:
        # http://java.sun.com/webapps/bugreport/crash.jsp
        #

        The above VM is a local build of of the openjdk hotspot-gc/hotspot repo at this revision:

        changeset: 944:68ef3fdcdb76
        tag: tip
        user: ysr
        date: Thu Sep 10 16:46:17 2009 -0700
        summary: 6872136: CMS: confusing message may be printed when a collector is switched off implicitly

        which is essentially jdk7-b72.

        Full hs_err log is attached. The attached large003.tlog file can be edited and used to reproduce the failure.
        gc/gctests/LargeObjects/large005 also fails in the same way.
        Failing tests:-

        gc/gctests/LargeObjects/large003
        gc/gctests/LargeObjects/large004
        gc/gctests/LargeObjects/large005
        Fails on 32-bit too (see entry 5 of "Comments" for link); so removed "64-bit" from
        Synopsis. Also added "CMS:" prefix to synopsis.
        Also gc/gctests/LargeObjects/large001.

        See: http://sqeweb.sfbay.sun.com/nfs/tools/gtee/results/JDK7/NIGHTLY/VM/2010-09-07/Main_Baseline/vm/solaris-sparc/client/mixed/solaris-sparc_vm_client_mixed_vm.gc.testlist/ResultDir/large003/hs_err_pid29094.log

        This fails on sparis/sparc with -client, so i am changing the synopsis
        accordingly.
        gc.gctests.LargeObjects.large001.large001
        gc/gctests/LargeObjects/large003
        gc/gctests/LargeObjects/large005
        Dropped "CMS" from synopsis, seeing as to how this is a ParNew bug
        which does not need CMS for it to manifest.

              Assignee:
              Y. Ramakrishna
              Reporter:
              John Coomes (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: